<resources>
    <string name="app_name">车掌控</string>
    <string name="loading_hint_text">加载中。。。</string>
    <string name="release_date">2017年11月</string>
    <string name="login_user_name_personage">车牌号</string>
    <string name="login_user_name_group">分组名</string>
    <string name="login_user_name_company">公司名</string>
    <string name="login_user_name_gis">GIS用户</string>
    <string name="login_pwd">密码</string>
    <string name="login_commit">登录</string>
    <string name="login_type_platenumber">车牌</string>
    <string name="login_type_platenumber_color">车牌顔色</string>
    <string name="login_type_group">分组</string>
    <string name="login_type_company">公司</string>
    <string name="login_type_gis">GIS</string>
    <string name="remember_pwd">记住密码</string>
    <string name="username_null">用户名不能为空</string>
    <string name="username_error">无法获取用户名，退出界面再重新进入</string>
    <string name="pwd_null">密码不能为空</string>
    <string name="pwd_error">无法获取密码，退出界面再重新进入</string>
    <string name="remenber_error">无法获取记住密码设置，退出界面再重新进入</string>
    <string name="search_hint">搜索车辆</string>
    <string name="location_hint">"获取位置权限失败，无法进行定位"</string>
    <string name="warning">警报</string>
    <string name="carinfo">详情</string>
    <string name="track">轨迹</string>
    <string name="operation">操作</string>
    <string name="marker_hint">查看车辆详情</string>
    <string name="marker_info_error">获取不到车辆信息</string>
    <string name="marker_address_error">获取地址失败</string>
    <string name="no_location_info">无定位信息</string>
    <string name="marker_address_analysis">正在解析地址</string>
    <string name="settings_userinfo">拥有 %1$s 辆车</string>
    <string name="settings_road_refresh_unit">分钟</string>
    <string name="settings_car_refresh_unit">秒</string>
    <string name="settings_no_road_refresh">无</string>
    <string name="allcarlist_title">车辆列表</string>
    <string name="allcarlist_allcar">全部(%1$s)</string>
    <string name="allcarlist_run">行驶(%1$s)</string>
    <string name="allcarlist_stop">静止(%1$s)</string>
    <string name="allcarlist_alarm">报警(%1$s)</string>
    <string name="online_status">在线</string>
    <string name="outline_status">离线</string>
    <string name="acc_open_status">开</string>
    <string name="acc_run_status">行驶</string>
    <string name="alarm_status">报警</string>
    <string name="exception_status">异常</string>
    <string name="acc_stop_status">熄火</string>
    <string name="bottom_select_enter">确认(%1$s)</string>
    <string name="bottom_select_clean">清空</string>
    <string name="bottom_select_all">全选</string>
    <string name="bottom_select_hint">已勾选%1$s辆车</string>
    <string name="search_layout_hint">搜索车牌号码、颜色</string>
    <string name="title_search_layout_hint">搜索%1$s中的车辆</string>
    <string name="data_error_again">数据错误，需退出页面重新操作</string>
    <string name="no_car_data">暂无车辆</string>
    <string name="load_data_error">无法加载数据，请点击重试</string>
    <string name="cancel">取消</string>
    <string name="enter">确定</string>
    <string name="enter_feepay">确认缴费</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="alarm_type">报警类型</string>
    <string name="alarm_title">查看警报</string>
    <string name="track_title">查看轨迹</string>
    <string name="compact_start_time">开始：</string>
    <string name="compact_end_time">结束：</string>
    <string name="compact_type">类型：</string>
    <string name="compact_operation_send_message">发送信息</string>
    <string name="compact_operation_fortify">设防</string>
    <string name="compact_operation_fortify_off">撤防</string>
    <string name="compact_operation_reset_psw">复位终端密码</string>
    <string name="compact_operation_horn_on">鸣喇叭</string>
    <string name="compact_operation_horn_off">关喇叭</string>
    <string name="compact_operation_open_cardoor">开车门</string>
    <string name="compact_operation_lock_cardoor">锁车门</string>
    <string name="compact_year">年</string>
    <string name="compact_month">月</string>
    <string name="compact_day">日</string>
    <string name="compact_hour">时</string>
    <string name="compact_min">分</string>
    <string name="hint_settime_error">选择的时间不能超过当前时间</string>
    <string name="hint_settime_error2">选择的时间不能是已过去的时间</string>
    <string name="no_search_car">搜索不到相应车辆</string>
    <string name="unidentifiable_car">无法识别此车辆</string>
    <string name="no_get_carinfo">无法获取该车辆信息</string>
    <string name="carinfo_title">车辆详情</string>
    <string name="carinfo_platenumber">车牌号</string>
    <string name="carinfo_status">更多状态</string>
    <string name="carinfo_alarms">违规信息</string>
    <string name="carinfo_time">定位时间</string>
    <string name="carinfo_speed">时速</string>
    <string name="carinfo_orientation">方向</string>
    <string name="carinfo_elevation">海拔</string>
    <string name="carinfo_mileage">里程</string>
    <string name="carinfo_adress">地址</string>
    <string name="carinfo_install_time">安装时间</string>
    <string name="carinfo_pay_time">缴费时间</string>
    <string name="carinfo_validity_time">有效期</string>
    <string name="carinfo_company_name">所属公司</string>
    <string name="carinfo_group_name">所属分组</string>
    <string name="carinfo_contact">联系人</string>
    <string name="carinfo_phone">联系电话</string>
    <string name="north">正北</string>
    <string name="northeast">东北</string>
    <string name="east">正东</string>
    <string name="southeast">东南</string>
    <string name="south">正南</string>
    <string name="southwest">西南</string>
    <string name="west">正西</string>
    <string name="northwest">西北</string>
    <string name="car_status_acc">ACC</string>
    <string name="car_status_location">定位</string>
    <string name="car_status_lat">纬度</string>
    <string name="car_status_lng">经度</string>
    <string name="car_status_operation">运营</string>
    <string name="car_status_secrecy">保密插件</string>
    <string name="car_status_brake">刹车</string>
    <string name="car_status_signalleft">左转向灯</string>
    <string name="car_status_signalright">右转向灯</string>
    <string name="car_status_highbeam">远光灯</string>
    <string name="car_status_oiline">油路</string>
    <string name="car_status_circuitry">电路</string>
    <string name="status_open">开</string>
    <string name="status_close">关</string>
    <string name="status_location">锁定</string>
    <string name="status_unlocation">未</string>
    <string name="status_lat_south">南纬</string>
    <string name="status_lat_north">北纬</string>
    <string name="status_lng_west">西经</string>
    <string name="status_lng_east">东经</string>
    <string name="status_operation_null">空载</string>
    <string name="status_operation_all">重载</string>
    <string name="status_secrecy_open">加密</string>
    <string name="status_secrecy_close">未加密</string>
    <string name="status_brake_open">制动</string>
    <string name="status_brake_close">正常</string>
    <string name="status_on">ON</string>
    <string name="status_off">OFF</string>
    <string name="faq_hint">还没解决？</string>
    <string name="faq_title">常见问题</string>
    <string name="faq_contact">联系客服</string>
    <string name="hot_faq">热门问题</string>
    <string name="offline_map">离线地图</string>
    <string name="about_us">关于我们</string>
    <string name="share">推荐给朋友</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_sent_failed">发送失败</string>
    <string name="share_auth_denied">认证失败</string>
    <string name="share_unsupport">不支持</string>
    <string name="share_unknown">未知错误</string>
    <string name="logout">退出登录</string>
    <string name="settings_title">设置</string>
    <string name="car_refresh_settings">车辆刷新设置</string>
    <string name="road_refresh_settings">路况刷新设置</string>
    <string name="downloading">正在下载</string>
    <string name="download">下载</string>
    <string name="downloaded">已下载</string>
    <string name="download_stop">已暂停</string>
    <string name="download_wait">等待下载</string>
    <string name="dataerror_download_again">数据错误，需重新下载</string>
    <string name="undefined">未定义</string>
    <string name="download_manager">下载管理</string>
    <string name="city_list">城市列表</string>
    <string name="guangdong">广东省</string>
    <string name="nostras_city">国内城市</string>
    <string name="allcity">所有城市</string>
    <string name="current_city">当前城市</string>
    <string name="offline_download_manager_finish">完成</string>
    <string name="offline_download_finish">下载完成</string>
    <string name="offline_download_all">全部下载</string>
    <string name="offline_stop_all">全部暂停</string>
    <string name="offline_stop_downlod">暂停下载</string>
    <string name="offline_restart_downlod">继续下载</string>
    <string name="offline_delete_map">删除 离线地图(%1$s)</string>
    <string name="offline_delete">删除</string>
    <string name="offline_download_nocontent">暂无下载，点击“城市列表”进行下载吧！</string>
    <string name="opinion_content_hint">有想法或者疑问，就告诉我吧~</string>
    <string name="opinion_user_name_hint">请输入您的称呼</string>
    <string name="opinion_user_phone_hint">请输入您的手机号</string>
    <string name="feedback_commit">提交反馈</string>
    <string name="feedback_no_content">还没填写反馈内容呢！</string>
    <string name="feedback_user">用户：</string>
    <string name="feedback_phone">手机号：</string>
    <string name="feedback_content">意见：</string>
    <string name="feedback_title">意见反馈</string>
    <string name="track_activity_title">轨迹回放</string>
    <string name="track_info_activity_title">轨迹详情</string>
    <string name="track_log_activity_title">轨迹日志</string>
    <string name="track_log_stoptime">停留</string>
    <string name="track_play_speed_fase">快</string>
    <string name="track_play_speed_middle">中</string>
    <string name="track_play_speed_slow">慢</string>
    <string name="about_title">关于</string>
    <string name="app_name_version">车掌控</string>
    <string name="app_version_string">软件版本</string>
    <string name="app_time">发布日期</string>
    <string name="app_official_website">官方网站</string>
    <string name="app_wechat_search_car">微信查车</string>
    <string name="app_contact_us">联系我们</string>
    <string name="app_copyright">Copyright &#169; 2005-2017</string>
    <string name="app_company_name">广东华盈光达科技有限公司</string>
    <string name="push_message_title">系统消息</string>
    <string name="no_push_message_data">暂无消息</string>
    <string name="offlinemap_list_search_hint">请输入城市名称或首字母</string>
    <string name="alarm_info_activity_title">警报详情</string>
    <string name="bottom_select_cancelall">取消全选</string>
    <string name="bottom_select_null">没有选择类型</string>
    <string name="no_alarm_log_data">无警报日志</string>
    <string name="bottom_select_finish">完成（%1$s）</string>
    <string name="operation_send_success">指令已发送</string>
    <string name="operation_pwd_error">密码错误</string>
    <string name="operation_chenge_success">修改成功</string>
    <string name="operation_send_message_success">发送成功</string>
    <string name="operation_error">操作失败</string>
    <string name="no_operation_error">无操作内容</string>
    <string name="send_message_hint">请输入信息</string>
    <string name="send_message_title">请输入信息</string>
    <string name="message_no_content">还没填写信息呢！</string>
    <string name="track_total_mileage_str">总里程 %1$skm</string>
    <string name="ctrl_pwd_null">操作密码不能为空</string>
    <string name="terminal_pwd_null">终端密码不能为空</string>
    <string name="use_guide">使用指南</string>
    <string name="account_explain">用户说明</string>
    <string name="commit_status_title">已提交</string>
    <string name="commit_status_hint">客服会尽快联系您，请耐心等待。</string>
    <string name="processed_status_title">处理中</string>
    <string name="processed_status_hint">维修师傅会尽快上门维修，请耐心等待。</string>
    <string name="finish_status_title">已结束</string>
    <string name="finish_status_hint">本维修单已维修完毕。</string>
    <string name="maintenance_order_fault_title">故障描述</string>
    <string name="order_attachment_title">附件</string>
    <string name="order_progress_title">进度跟踪</string>
    <string name="maintenance_order_evaluate_endtiem">结束时间：</string>
    <string name="car_cost">车辆费用</string>
</resources>